// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-success='true'] {
  border-color: #22674e;
}

.emotion-0[data-error='true'] {
  border-color: #b3144d;
}

.emotion-0:hover {
  border-color: #792dd4;
}

.emotion-0[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.emotion-0[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-0[data-controls='false']>.emotion-4 {
  border-width: 0;
}

.emotion-0[data-size='small'] {
  height: 2rem;
}

.emotion-0[data-size='medium'] {
  height: 2.5rem;
}

.emotion-0[data-size='large'] {
  height: 3rem;
}

.emotion-2 {
  padding: 0.125rem 0.5rem;
}

.emotion-2[data-size='small'] {
  height: 2rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
  padding: 0.25rem 0.5rem;
}

.emotion-5 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.emotion-7 {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: Regular;
  line-height: 1.25rem;
  text-align: center;
  padding: 0.5rem;
  background: none;
}

.emotion-7[data-has-unit='true'] {
  text-align: left;
  padding: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-7::-webkit-outer-spin-button,
.emotion-7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-7 {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  -ms-appearance: textfield;
  appearance: textfield;
}

.emotion-7[data-size='small'] {
  height: 2rem;
}

.emotion-7[data-size='medium'] {
  height: 2.5rem;
}

.emotion-7[data-size='large'] {
  height: 3rem;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: Regular;
  line-height: 1.5rem;
}

.emotion-7:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
  border-block: 1px solid #d9dadd;
}

.emotion-7:read-only {
  color: #3f4250;
  background: #f9f9fa;
  border-block: 1px solid #d9dadd;
}

.emotion-7:-moz-read-only~.exvap482 {
  background: #f9f9fa;
}

.emotion-7:read-only~.exvap482 {
  background: #f9f9fa;
}

.emotion-7:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
  border-block: 1px solid #e9eaeb;
}

.emotion-7:disabled~.exvap482 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7:placeholder-shown~.exvap482 {
  color: #727683;
  font-size: 1rem;
}

.emotion-7[data-controls='false'] {
  text-align: left;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
      >
        <div>
          <div
            class="emotion-0 emotion-1"
            data-controls="true"
            data-disabled="false"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <button
                aria-label="minus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="emotion-4 emotion-5 emotion-6"
            >
              <input
                class="emotion-7 emotion-8"
                data-controls="true"
                data-has-unit="false"
                data-size="large"
                id="_r_0_"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <button
                aria-label="plus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`numberInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-success='true'] {
  border-color: #22674e;
}

.emotion-0[data-error='true'] {
  border-color: #b3144d;
}

.emotion-0:hover {
  border-color: #792dd4;
}

.emotion-0[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.emotion-0[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-0[data-controls='false']>.emotion-4 {
  border-width: 0;
}

.emotion-0[data-size='small'] {
  height: 2rem;
}

.emotion-0[data-size='medium'] {
  height: 2.5rem;
}

.emotion-0[data-size='large'] {
  height: 3rem;
}

.emotion-2 {
  padding: 0.125rem 0.5rem;
}

.emotion-2[data-size='small'] {
  height: 2rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
  padding: 0.25rem 0.5rem;
}

.emotion-5 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.emotion-7 {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: Regular;
  line-height: 1.25rem;
  text-align: center;
  padding: 0.5rem;
  background: none;
}

.emotion-7[data-has-unit='true'] {
  text-align: left;
  padding: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-7::-webkit-outer-spin-button,
.emotion-7::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-7 {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  -ms-appearance: textfield;
  appearance: textfield;
}

.emotion-7[data-size='small'] {
  height: 2rem;
}

.emotion-7[data-size='medium'] {
  height: 2.5rem;
}

.emotion-7[data-size='large'] {
  height: 3rem;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: Regular;
  line-height: 1.5rem;
}

.emotion-7:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
  border-block: 1px solid #d9dadd;
}

.emotion-7:read-only {
  color: #3f4250;
  background: #f9f9fa;
  border-block: 1px solid #d9dadd;
}

.emotion-7:-moz-read-only~.exvap482 {
  background: #f9f9fa;
}

.emotion-7:read-only~.exvap482 {
  background: #f9f9fa;
}

.emotion-7:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
  border-block: 1px solid #e9eaeb;
}

.emotion-7:disabled~.exvap482 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-7:placeholder-shown~.exvap482 {
  color: #727683;
  font-size: 1rem;
}

.emotion-7[data-controls='false'] {
  text-align: left;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
      >
        <div>
          <div
            class="emotion-0 emotion-1"
            data-controls="true"
            data-disabled="true"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <button
                aria-label="minus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoej uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                disabled=""
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="emotion-4 emotion-5 emotion-6"
            >
              <input
                aria-label="Number Input"
                class="emotion-7 emotion-8"
                data-controls="true"
                data-has-unit="false"
                data-size="large"
                disabled=""
                id="_r_4_"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5j"
              data-size="large"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <button
                aria-label="plus"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoej uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                disabled=""
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
